# assignment3-scaling

./: pyproject.toml
cs336_scaling/: chinchilla_isoflops.ipynb  chinchilla_isoflops.py
