[project]
name = "cs336-scaling"
version = "1.0.0"
description = "CS 336 Assignment 3: Scaling Laws"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "requests>=2.32.3",
    "rich>=14.2.0",
    "scipy>=1.16.2",
    "torch>=2.7.0",
]

[tool.uv]
package = true
python-preference = "managed"


[tool.setuptools.packages.find]
include = ["cs336_basics"]
